--- a/MS_Data_Visualization_Demo_July2024.ipynb
+++ b/MS_Data_Visualization_Demo_July2024.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "30cbc362",
+   "metadata": {},
+   "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/dbwilburn/CCIC_MSP2024/blob/main/MS_Data_Visualization_Demo_July2024.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "afe7ce31-46fa-4284-9c19-ae4e7b7a9c90",
    "metadata": {},
    "source": [
@@ -76,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mzml_file = 'sample_data.mzML'\n",
+    "mzml_file = 'https://raw.githubusercontent.com/dbwilburn/CCIC_MSP2024/main/sample_data.mzML'\n",
     "\n",
     "stream = mzml.read(mzml_file) # Opened connection to sample_data.mzML to begin reading\n",
     "spectra = list(stream) # Load the entire stream into memory as a list of spectra"
@@ -258,7 +266,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results_file = 'sample_search.tsv'\n",
+    "results_file = 'https://raw.githubusercontent.com/dbwilburn/CCIC_MSP2024/main/sample_search.tsv'\n",
     "\n",
     "search_results = pd.read_csv(results_file, delimiter='\\t')"
    ]
