--- a/MS_Data_Visualization_Demo_July2024.ipynb
+++ b/MS_Data_Visualization_Demo_July2024.ipynb
@@ -20,14 +20,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e2feaa0c-c984-4d61-819f-8b08f48c6c06",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "a0a7ade2-3a77-4325-81b0-7422046c77f1",
    "metadata": {},
@@ -43,7 +35,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install --upgrade numpy pandas matplotlib pyteomics"
+    "!pip install --upgrade numpy pandas matplotlib pyteomics\n",
+    "!wget https://raw.githubusercontent.com/dbwilburn/CCIC_MSP2024/main/sample_data.mzML\n",
+    "!wget https://raw.githubusercontent.com/dbwilburn/CCIC_MSP2024/main/sample_search.tsv"
    ]
   },
   {
@@ -62,14 +56,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d699babf-0a67-4fd5-819a-62ba7f9abe1e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "4f4d212d",
    "metadata": {},
@@ -84,19 +70,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mzml_file = 'https://raw.githubusercontent.com/dbwilburn/CCIC_MSP2024/main/sample_data.mzML'\n",
+    "mzml_file = 'sample_data.mzML'\n",
     "\n",
     "stream = mzml.read(mzml_file) # Opened connection to sample_data.mzML to begin reading\n",
     "spectra = list(stream) # Load the entire stream into memory as a list of spectra"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "501d3940-1c88-4ca0-9ddf-4beabc98d11f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -236,22 +214,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "91b04b18-b957-4d89-b5b8-23b1face9773",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "54c18aa9-bb87-4c1c-8b39-26a17b006517",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "5d21bf2e-d248-4a50-8492-84b7c673b083",
    "metadata": {},
@@ -266,7 +228,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results_file = 'https://raw.githubusercontent.com/dbwilburn/CCIC_MSP2024/main/sample_search.tsv'\n",
+    "results_file = 'sample_search.tsv'\n",
     "\n",
     "search_results = pd.read_csv(results_file, delimiter='\\t')"
    ]
@@ -639,14 +601,6 @@
    "source": [
     "search_results.head(10)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7e6db32a-7acc-4938-bddf-3db19617c288",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
